--- a/demo.ipynb
+++ b/demo.ipynb
@@ -18,9 +18,36 @@
    "source": [
     "dataPath = \"parallelCoordinates/projection/data/\" \n",
     "cfa = pd.read_csv(dataPath + \"allCFA_355030804000048.csv\") \n",
+    "cfa = cfa.rename(columns = {\"Unnamed: 0\": \"counterfactuals\"}) \n",
     "dist = pd.read_csv(dataPath + \"distAllCFA_355030804000048.csv\") \n",
     "cfr_cfs = pd.read_csv(dataPath + \"CFS2CFR_355030804000048.csv\") \n",
     "projection = pd.read_csv(dataPath + \"contra_Clusters_proj.csv\")  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['counterfactuals', 'Passengers', 'TravelingTime', 'HighRiskAreas',\n",
+       "       'FontainArea', 'ExpansionPhase', 'Population', 'Favelas', 'WaterSupply',\n",
+       "       'HighIncomeHolder', 'LiterateHouseHolder', 'WomanHouseHolder',\n",
+       "       'PopulationDensity', 'ImprovisedHousing', 'PermanentHousing',\n",
+       "       'SewageCollection', 'GarbageCollection', 'YoungManRate',\n",
+       "       'Verticalization', 'Bars', 'Schools', 'BusStops'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cfa.columns "
    ]
   },
   {
@@ -40,12 +67,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4742010dee214a9b828aafbc10a4cddd",
+       "model_id": "8f781627d2d74ee5b8e76ce9974e518c",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Projection(cfa=[{'Unnamed: 0': 'Orig', 'Passengers': 1.5580999999999998, 'TravelingTime': 35.3, 'HighRiskAreas…"
+       "Projection(cfa=[{'counterfactuals': 'Orig', 'Passengers': 1.5580999999999998, 'TravelingTime': 35.3, 'HighRisk…"
       ]
      },
      "metadata": {},
