--- a/demo.ipynb
+++ b/demo.ipynb
@@ -17,8 +17,8 @@
    "outputs": [],
    "source": [
     "dataPath = \"parallelCoordinates/projection/data/\" \n",
-    "cfa = pd.read_csv(dataPath + \"allCFA_355030804000048.csv\") \n",
-    "cfa = cfa.rename(columns = {\"Unnamed: 0\": \"counterfactuals\"}) \n",
+    "cfa = pd.read_csv(dataPath + \"cfa.csv\") \n",
+    "cfa = cfa.rename(columns = {\"Unnamed: 0\": \"\"}) \n",
     "dist = pd.read_csv(dataPath + \"distAllCFA_355030804000048.csv\") \n",
     "cfr_cfs = pd.read_csv(dataPath + \"CFS2CFR_355030804000048.csv\") \n",
     "projection = pd.read_csv(dataPath + \"contra_Clusters_proj.csv\")  "
@@ -26,14 +26,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['counterfactuals', 'Passengers', 'TravelingTime', 'HighRiskAreas',\n",
-       "       'FontainArea', 'ExpansionPhase', 'Population', 'Favelas', 'WaterSupply',\n",
+       "Index(['', 'Passengers', 'TravelingTime', 'HighRiskAreas', 'FontainArea',\n",
+       "       'ExpansionPhase', 'Population', 'Favelas', 'WaterSupply',\n",
        "       'HighIncomeHolder', 'LiterateHouseHolder', 'WomanHouseHolder',\n",
        "       'PopulationDensity', 'ImprovisedHousing', 'PermanentHousing',\n",
        "       'SewageCollection', 'GarbageCollection', 'YoungManRate',\n",
@@ -41,7 +43,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -52,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,18 +63,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8f781627d2d74ee5b8e76ce9974e518c",
+       "model_id": "5391405c070747c8ab7b637966eccc83",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Projection(cfa=[{'counterfactuals': 'Orig', 'Passengers': 1.5580999999999998, 'TravelingTime': 35.3, 'HighRisk…"
+       "Projection(cfa=[{'': 'Orig', 'Passengers': 1.5580999999999998, 'TravelingTime': 35.3, 'HighRiskAreas': 0.0, 'F…"
       ]
      },
      "metadata": {},
