--- a/demo.ipynb
+++ b/demo.ipynb
@@ -69,7 +69,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5391405c070747c8ab7b637966eccc83",
+       "model_id": "8f222994974943bda5410fd270c2e9a8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -82,6 +82,8 @@
     }
    ],
    "source": [
+    "import ccwidget \n",
+    "overview = ccwidget.CFOverview(cfa, dist, cfr_cfs, projection)  \n",
     "overview.widget "
    ]
   }
