--- a/LinesChartDemo.ipynb
+++ b/LinesChartDemo.ipynb
@@ -12,19 +12,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pre-loading data to ease the simulation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "linedata = {} \n",
+    "StepsData = {} \n",
     "nSteps = 3 \n",
-    "dataPath = \"parallelCoordinates/projection/data/\" \n",
+    "dataPath = \"parallelCoordinates/projection/data/\"\n",
+    "## just loading the variables name\n",
+    "features = pd.read_csv(dataPath + 'recFiltering/Step0/order.csv')['0'].values\n",
+    "\n",
     "for i in range(nSteps): \n",
-    "    linedata[i] = {} \n",
+    "    StepsData[i] = {}\n",
     "    path = dataPath + \"recFiltering/Step\" + str(i) + \"/\" \n",
-    "    for file in os.listdir(path): \n",
-    "        linedata[i][file[:-4]] = pd.read_csv(path + file).rename(columns = {\"Unnamed: 0\": \"\"}) "
+    "    \n",
+    "    StepsData[i]['order'] = pd.read_csv(path + 'order.csv').rename(columns = {\"Unnamed: 0\": \"\"}) \n",
+    "    StepsData[i]['lines'] = {}\n",
+    "    \n",
+    "    \n",
+    "    for feat in features: \n",
+    "        StepsData[i]['lines'][feat] = pd.read_csv(path + feat +'.csv').rename(columns = {\"Unnamed: 0\": \"\"})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### First step, no selection"
    ]
   },
   {
@@ -33,12 +55,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lines = ccwidget.CFLines(linedata, lambda x: print(x))  "
+    "order = StepsData[0]['order']\n",
+    "lines = StepsData[0]['lines'] "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "linesCF = ccwidget.CFLines(lines, order, lambda x: print(x)) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -46,27 +78,36 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1c317a684b8f4f0dba1a46a16269e0ff",
+       "model_id": "99179b3f3f9f4ecdba6379919af1e97a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Lines(cfData={0: {'WaterSupply': [{'': 0.0, '1': 0.0}, {'': 0.16666666666666666, '1': 0.0}, {'': 0.33333333333…"
+       "Lines()"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'WaterSupply': None, 'Schools': None, 'Passengers': None, 'Verticalization': None, 'Favelas': None, 'ImprovisedHousing': None, 'PermanentHousing': None, 'order': None, 'LiterateHouseHolder': None, 'GarbageCollection': None, 'YoungManRate': None, 'FontainArea': None, 'BusStops': None, 'SewageCollection': None, 'PopulationDensity': None, 'selection': None, 'WomanHouseHolder': None, '.~lock.order.': None, 'ExpansionPhase': None, 'Population': None, 'Bars': None, 'TravelingTime': None, 'HighRiskAreas': None, 'HighIncomeHolder': None}\n"
-     ]
     }
    ],
    "source": [
-    "lines.widget "
+    "linesCF.widget "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### After"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "linesCF.update_chart(StepsData[1][\"lines\"], StepsData[1][\"order\"]) "
    ]
   }
  ],
